User count metrics for site roles and special groups (#4776)